--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 @import "./desktop/desktop.css" only screen and (min-width:1000px);
 body{
     position: relative;
-    overflow-x:hidden;
+    overflow-x:hidden !important;
 }
 *{
     margin:0;
